--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Оно тебе надо</title>
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -14,18 +14,18 @@
     <header class="header">
         <nav class="header__nav">
             <ul class="header__menu">
-                <li class="header_item"><a class="header_link" href="">главная</a></li>
-                <li class="header_item circle"><a class="header_link border-underline" href="">посмотреть лоты</a></li>
-                <li class="header_item circle"><a class="header_link border-underline" href="">об аукционе</a></li>
+                <li class="header__item"><a class="header__link" href="#">главная</a></li>
+                <li class="header__item circle"><a class="header__link border-underline" href="#">посмотреть лоты</a></li>
+                <li class="header__item circle"><a class="header__link border-underline" href="#">об аукционе</a></li>
             </ul>
 
             <a class="image-with-margin" href=""><img src="images/logo-black.svg" alt="Logo"></a>
             <address class="contacts">
                 <ul class="contacts__list">
-                    <li class="contacts_item1"><a class="contacts_link" href="tel:+99995555555">+9 999 555 5555</a></li>
-                    <li class="contacts_item2"><a class="contacts_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                    <li class="contacts__item"><a class="contacts__link border-underline" href="tel:+99995555555">+9 999 555 5555</a></li>
+                    <li class="contacts__item"><a class="contacts__link border-underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                     </li>
-                    <li class="contacts__item3">наб. Принсенграхт 263-<br>265, Амстердам</li>
+                    <li class="contacts__item">наб. Принсенграхт 263-<br>265, Амстердам</li>
                 </ul>
 
             </address>
@@ -96,16 +96,16 @@
         <nav class="footer__nav">
             <address class="contacts">
                 <ul class="contacts__list">
-                    <li class="contacts_item1"><a class="contacts_link" href="tel:+99995555555">+9 999 555 5555</a></li>
-                    <li class="contacts_item2"><a class="contacts_link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                    <li class="contacts__item"><a class="contacts__link border-underline" href="tel:+99995555555">+9 999 555 5555</a></li>
+                    <li class="contacts__item"><a class="contacts__link border-underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                     </li>
-                    <li class="contacts__item3">наб. Принсенграхт 263-265,<br> Амстердам</li>
+                    <li class="contacts__item">наб. Принсенграхт 263-265, Амстердам</li>
                 </ul>
             </address>
             <ul class="footer__menu">
-                <li class="footer_item"><a class="footer_link" href="">главная</a></li>
-                <li class="footer_item"><a class="footer_link border-underline" href="">посмотреть лоты</a></li>
-                <li class="footer_item"><a class="footer_link border-underline" href="">об аукционе</a></li>
+                <li class="footer__item"><a class="footer__link" href="">главная</a></li>
+                <li class="footer__item"><a class="footer__link border-underline" href="">посмотреть лоты</a></li>
+                <li class="footer__item"><a class="footer__link border-underline" href="">об аукционе</a></li>
             </ul>
             <ul class="footer__socials-medias">
                 <li class="footer__social-media"> <a href="#"> <img src="/images/yt.svg" alt="Youtube"></a></li>
