--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <li class="footer__item"><a class="footer__link border-underline" href="">об аукционе</a></li>
             </ul>
             <ul class="footer__socials-medias">
-                <li class="footer__social-media"> <a href="#"> <img src="/images/yt.svg" alt="Youtube"></a></li>
-                <li class="footer__social-media"> <a href="#"> <img src="/images/vk.svg" alt="Vk"></a></li>
-                <li class="footer__social-media"> <a href="#"> <img src="/images/pinterest.svg" alt="Pinterest"></a>
+                <li class="footer__social-media"> <a href="#"> <img src="images/yt.svg" alt="Youtube"></a></li>
+                <li class="footer__social-media"> <a href="#"> <img src="images/vk.svg" alt="Vk"></a></li>
+                <li class="footer__social-media"> <a href="#"> <img src="images/pinterest.svg" alt="Pinterest"></a>
                 </li>
             </ul>
         </nav>
